fix: adjust spacing in mobile view

--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   font-size: clamp(2rem, 4vw, 3rem);
-  font-style: italic
+  font-style: italic;
+  text-align: center;
 }
 
 .book-collections-btn {
@@ -123,6 +124,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex; 
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 2rem;
   /* min-height: 100vh; */
   min-width: 100vw;
@@ -154,7 +156,6 @@ h1, h2, h3, h4, h5, h6 {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     height: 100%;
-    padding: 2rem;
 }
 
 
@@ -226,8 +227,8 @@ span {
   align-items: center;
   justify-self: center;
   align-self: center;
-  width: min(500px, 50vw);
-  min-height: 40vh;
+  width: min(600px, 90vw);
+  min-height: 60vh;
   position: fixed;
   border: none;
   border-radius: 0.5rem;
